--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Azei's Portfolio</title>
+    <title>azei's portfolio</title>
     <meta charset="UTF-8">
     <style>
         body {
@@ -13,9 +13,9 @@
             color: #333;
         }
         header {
-            border-bottom: 2px solid #f0f0f0;
-            padding-bottom: 20px;
-            margin-bottom: 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         h1 {
             color: #2c3e50;
