--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
         /* 标题容器样式 */
         header {
-            background-color: rgba(0, 0, 0, 0.5); /* 半透明背景 */
             padding: 40px;
             border-radius: 10px;
             max-width: 800px;
@@ -40,22 +39,21 @@
         h1 {
             font-size: 3.5em;
             margin-bottom: 15px;
-            text-shadow: 2px 2px 5px rgba(0,0,0,0.5); /* 文字阴影增强可读性 */
         }
 
         /* 副标题 */
         .subtitle {
-            font-size: 1.5em;
+            font-size: 1.1em;
             font-weight: 300;
             display: block; /* 使span独占一行 */
-            margin-top: 10px;
+            margin-top: 8px;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>欢迎你来</h1>
-        <span class="subtitle">@桑集</span>
+        <span class="subtitle">@azei</span>
     </header>
 </body>
 </html>
