--- a/index.html
+++ b/index.html
@@ -4,56 +4,77 @@
     <title>azei's portfolio</title>
     <meta charset="UTF-8">
     <style>
-        /* 全局样式重置 */
+        /* 全局样式 */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            scroll-behavior: smooth; /* 平滑滚动 */
         }
         
-        /* 全屏背景设置 */
-        body {
-            font-family: 'Helvetica', Arial, sans-serif;
-            height: 100vh; /* 100%视窗高度 */
-            background: 
-                linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), /* 半透明遮罩增强文字可读性 */
-                url('images/bg.jpg');
-            background-size: cover; /* 确保图片覆盖整个区域 */
+        /* 全屏页面公共样式 */
+        .page {
+            height: 100vh;
+            width: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: center; /* 垂直居中 */
-            align-items: center; /* 水平居中 */
+            justify-content: center;
+            align-items: center;
             text-align: center;
-            color: white; /* 浅色文字更适合深色背景 */
             padding: 20px;
+            position: relative;
         }
 
-        /* 标题容器样式 */
-        header {
-            padding: 40px;
-            border-radius: 10px;
-            max-width: 800px;
+        /* 第一页 */
+        #page1 {
+            background: 
+                linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
+                url('images/bg.jpg');
+            color: white;
+        }
+        /* 修正的子标题选择器 */
+        #page1 .subtitle {
+            font-size: 0.8em;
+            display: block;
+            margin-top: 5px;
         }
 
-        /* 主标题 */
-        h1 {
-            font-size: 3.5em;
-            margin-bottom: 15px;
+        /* 第二页 */
+        #page2 {
+        background: #f5f5f5;
+        color: #333;
+        justify-content: flex-start;
+        padding-top: 80px;
         }
 
-        /* 副标题 */
-        .subtitle {
-            font-size: 1.1em;
-            font-weight: 300;
-            display: block; /* 使span独占一行 */
-            margin-top: 8px;
+        /* 导航箭头 */
+        .down-arrow {
+            position: absolute;
+            bottom: 30px;
+            font-size: 2em;
+            color: inherit;
+            animation: bounce 2s infinite;
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+            40% {transform: translateY(-20px);}
+            60% {transform: translateY(-10px);}
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>欢迎你来</h1>
-        <span class="subtitle">@azei</span>
-    </header>
+    <!-- 第一页保持不变 -->
+    <section id="page1" class="page">
+        <header>
+            <h1>欢迎你来</h1>
+            <span class="subtitle">@azei</span>
+        </header>
+        <a href="#page2" class="down-arrow">↓</a>
+    </section>
+
+    <!-- 修改后的第二页 -->
+    <section id="page2" class="page">
+        <h2>这是第二页</h2>
+    </section>
 </body>
 </html>
