--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             justify-content: center; /* 标题居中 */
             padding: 0; /* 移除内边距 */
         }
-        #page2 h2 {
-           font-size: clamp(2.2rem, 8vw, 3.3rem);
-        }
+    
 
         /* 导航箭头 */
         .down-arrow {
@@ -166,7 +164,6 @@
 
     <!-- 第二页 - 新版全屏画廊 -->
     <section id="page2" class="page">
-        <h2>人像作品</h2>
         <div class="fullscreen-gallery">
             <div class="gallery-scroller">
                 <!-- 幻灯片1 -->
@@ -198,7 +195,7 @@
                 <div class="gallery-slide">
                     <a href="portfolio.html" class="gallery-more-card">
                         <div class="more-content">
-                            <div class="more-text">查看更多</div>
+                            <div class="more-text">查看更多人像作品</div>
                             <div class="more-icon">→</div>
                         </div>
                     </a>
