--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 
         /* 第一页 */
         #page1 {
-            background: var(--primary-color),
-                linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)),
-                url('images/bg.jpg') center/cover;
-            color: var(--text-light);
+            background: 
+            linear-gradient(to bottom, rgba(34,34,34,0.9), rgba(0,0,0,0.7)),
+            url('images/bg.jpg') center/cover;
         }
         #page1 h1 {
             font-size: clamp(2.2rem, 8vw, 3.3rem);
