--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             color: #FFFFFF;
             font-size: 3em;  /* 主标题放大 */
             margin-bottom: 10px; /* 可同步调整间距 */
+            text-stroke: 1px rgba(255,255,255,0.3);
+            -webkit-text-stroke: 1px rgba(255,255,255,0.3);
         }
         #page2 .subtitle {
             color: #FFFFFF;
