--- a/portfolio1.html
+++ b/portfolio1.html
@@ -89,46 +89,46 @@
     <div class="gallery">
         <!-- 示例图片项（根据实际数量增减） -->
         <div class="gallery-item">
-            <img src="image/work1.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work1.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work2.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work2.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work3.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work3.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work4.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work4.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work5.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work5.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work6.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work6.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work7.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work7.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work8.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work8.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work9.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work9.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work10.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work10.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work11.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work11.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work12.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work12.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work13.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work13.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <div class="gallery-item">
-            <img src="image/work14.jpg" class="gallery-image" onclick="openModal(this)">
+            <img src="images/work14.jpg" class="gallery-image" onclick="openModal(this)">
         </div>
         <!-- 继续添加更多作品 -->
     </div>
