--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <header>
             <h1>人像作品</h1>
         </header>
-        <a href="portfolio.html" class="action-btn">查看更多</a>
+        <a href="portfolio1.html" class="action-btn">查看更多</a>
         <a href="#page1" class="down-arrow">↑</a>
     </section>
 </body>
