--- a/portfolio1.html
+++ b/portfolio1.html
@@ -21,37 +21,40 @@
             z-index: 100;
         }
         .masonry-container {
-            column-count: 3;
-            column-gap: 20px;
             padding: 20px;
-            max-width: 1200px;
             margin: 0 auto;
+            width: 100%;
         }
+
         .masonry-item {
             break-inside: avoid;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             background: white;
             border-radius: 8px;
             overflow: hidden;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            position: relative;
-            transition: transform 0.3s ease;
+            max-width: 600px; /* 新增 */
+            margin-left: auto; /* 新增 */
+            margin-right: auto; /* 新增 */
+        }
+        .masonry-item {
+            break-inside: avoid;
+            margin-bottom: 30px;
+            background: white;
+            border-radius: 8px;
+            overflow: hidden;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            max-width: 600px;
+            margin: 0 auto;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: all 0.6s ease;
         }
         .masonry-item:hover {
             transform: translateY(-5px);
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
-        .masonry-item img {
-            width: 100%;
-            height: auto;
-            vertical-align: middle;
-        }
-        @media (max-width: 768px) {
-            .masonry-container { column-count: 2; }
-        }
-        @media (max-width: 480px) {
-            .masonry-container { column-count: 1; }
-        }
+
     </style>
 </head>
 <body>
@@ -157,5 +160,20 @@
         </div>
         <!-- 建议至少10个不同高度的图片项 -->
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if(entry.isIntersecting) {
+                        entry.target.classList.add('visible')
+                    }
+                })
+            }, { threshold: 0.1 })
+
+            document.querySelectorAll('.masonry-item').forEach(item => {
+                observer.observe(item)
+            })
+        })
+    </script>
 </body>
 </html>
