--- a/portfolio1.html
+++ b/portfolio1.html
@@ -26,18 +26,9 @@
             width: 100%;
         }
 
+        /* 合并后的masonry-item定义 */
         .masonry-item {
-            break-inside: avoid;
-            margin-bottom: 30px;
-            background: white;
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            max-width: 600px; /* 新增 */
-            margin-left: auto; /* 新增 */
-            margin-right: auto; /* 新增 */
-        }
-        .masonry-item {
+            position: relative; /* 新增定位基准 */
             break-inside: avoid;
             margin-bottom: 30px;
             background: white;
@@ -50,115 +41,148 @@
             transform: translateY(20px);
             transition: all 0.6s ease;
         }
+
+        .masonry-item.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
         .masonry-item:hover {
             transform: translateY(-5px);
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
+        /* 新增item-info样式 */
+        .item-info {
+            position: absolute;
+            bottom: -100%;
+            left: 0;
+            width: 100%;
+            padding: 15px;
+            background: rgba(0,0,0,0.7);
+            color: white;
+            transition: bottom 0.3s ease;
+        }
+
+        .masonry-item:hover .item-info {
+            bottom: 0;
+        }
+
+        .masonry-item img {
+            width: 100%;
+            height: auto;
+            vertical-align: middle;
+        }
+
+        /* 新增移动端适配 */
+        @media (max-width: 480px) {
+            .masonry-container {
+                padding: 10px;
+            }
+            .masonry-item {
+                margin-bottom: 15px;
+                border-radius: 4px;
+            }
+            .back-btn {
+                padding: 8px 15px;
+                font-size: 14px;
+            }
+            .item-info {
+                padding: 10px;
+                font-size: 12px;
+            }
+        }
     </style>
 </head>
 <body>
     <a href="index.html" class="back-btn">← 返回首页</a>
     <div class="masonry-container">
+        <!-- 示例修改第一个项目，其他请按此格式补充 -->
         <div class="masonry-item">
             <img src="images/portfolio1/work1.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work2.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work3.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work4.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work5.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work6.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work7.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work8.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work9.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work10.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work11.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work12.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work13.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work14.jpg" 
-                 alt=""
-                 loading="lazy">
-            <div class="item-info">
-            </div>
+                 alt=""  <!-- 请补充所有alt描述 -->
+                 loading="lazy"
+            >
         </div>
-        <!-- 建议至少10个不同高度的图片项 -->
+
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
