--- a/portfolio1.html
+++ b/portfolio1.html
@@ -23,10 +23,6 @@
             transform: translateY(20px);
             transition: all 0.6s ease;
         }
-        .masonry-item.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
         .masonry-item img {
             width: 100%;
             height: 100%;
@@ -69,85 +65,85 @@
         <!-- 示例修改第一个项目，其他请按此格式补充 -->
         <div class="masonry-item">
             <img src="images/portfolio1/work1.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work2.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work3.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt=""
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work4.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work5.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work6.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work7.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work8.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt=""
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work9.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt=""
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work10.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt=""
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work11.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt=""
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work12.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work13.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt="" 
                  loading="lazy"
             >
         </div>
         <div class="masonry-item">
             <img src="images/portfolio1/work14.jpg" 
-                 alt=""  <!-- 请补充所有alt描述 --
+                 alt=""  
                  loading="lazy"
             >
         </div>
@@ -161,27 +157,6 @@
             progress.style.width = `${(window.scrollY / totalHeight) * 100}%`;
         });
 
-        // 键盘导航
-        document.addEventListener('keydown', (e) => {
-            if (['ArrowDown', 'PageDown'].includes(e.key)) {
-                window.scrollBy({ top: window.innerHeight * 0.9, behavior: 'smooth' });
-            }
-            if (['ArrowUp', 'PageUp'].includes(e.key)) {
-                window.scrollBy({ top: -window.innerHeight * 0.9, behavior: 'smooth' });
-            }
-        });
-
-        // 渐显效果
-        document.addEventListener('DOMContentLoaded', () => {
-            const observer = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if(entry.isIntersecting) {
-                        entry.target.classList.add('visible')
-                    }
-                })
-            }, { threshold: 0.1 })
-            document.querySelectorAll('.masonry-item').forEach(observer.observe)
-        });
     </script>
 </body>
 </html>
