--- a/portfolio1.html
+++ b/portfolio1.html
@@ -5,55 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>人像作品-azei's portfolio</title>
     <style>
-        /* ===== 全屏样式 ===== */
+        /* ===== 关键修改点 ===== */
         html {
             scroll-behavior: smooth;
         }
+
         .masonry-container {
             padding: 0;
             max-width: none;
         }
+
         .masonry-item {
             position: relative;
             width: 100vw;
-            height: 100vh;
+            min-height: 100vh; /* 改为min-height */
             margin: 0;
-            overflow: hidden;
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.6s ease;
+            overflow: visible; /* 关闭溢出隐藏 */
+            display: flex;     /* 新增flex布局 */
+            align-items: center; /* 垂直居中 */
+            justify-content: center; /* 水平居中 */
+            background: #000;  /* 添加临时背景 */
         }
+
         .masonry-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            width: auto;       /* 改为自动宽度 */
+            height: auto;      /* 改为自动高度 */
+            max-width: 100%;   /* 防止溢出 */
+            max-height: 100vh; /* 限制最大高度 */
+            object-fit: contain; /* 完整显示图片 */
             transition: transform 0.8s ease;
+        }
+
+        /* ===== 其他保持原有样式 ===== */
+        .masonry-item.visible {
+            opacity: 1;
+            transform: translateY(0);
         }
         .masonry-item:hover img {
             transform: scale(1.03);
-        }
-
-        /* ===== 移动端优化 ===== */
-        @media (max-width: 768px) {
-            .masonry-item {
-                height: 80vh;
-            }
-            .back-btn {
-                background: rgba(0,0,0,0.7);
-                color: white;
-                backdrop-filter: blur(5px);
-            }
-        }
-
-        /* ===== 进度条 ===== */
-        .scroll-progress {
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 3px;
-            background: #ff6b6b;
-            z-index: 1000;
-            transition: width 0.3s ease;
         }
     </style>
 </head>
@@ -150,6 +139,11 @@
 
     </div>
     <script>
+        // 调试代码：在控制台输出图片加载状态
+        document.querySelectorAll('img').forEach(img => {
+            img.onload = () => console.log(`Loaded: ${img.src}`);
+            img.onerror = () => console.error(`Error: ${img.src}`);
+        });
         // 滚动进度条
         window.addEventListener('scroll', () => {
             const progress = document.querySelector('.scroll-progress');
