--- a/portfolio1.html
+++ b/portfolio1.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>人像作品-azei's portfolio</title>
     <style>
+        .back-btn {
+            position: fixed;
+            bottom: 20px;    /* 从顶部改为底部 */
+            left: 50%;       /* 水平居中定位 */
+            transform: translateX(-50%); /* 精确居中 */
+            padding: 12px 30px;
+            background: rgba(255,255,255,0.9);
+            border-radius: 30px;
+            text-decoration: none;
+            color: #333;
+            z-index: 1000;    /* 提高层级确保在最前 */
+            box-shadow: 0 3px 6px rgba(0,0,0,0.1); /* 新增投影 */
+            transition: all 0.3s ease;
+        }
+
+        /* 悬停效果优化 */
+        .back-btn:hover {
+            background: rgba(255,255,255,1);
+            transform: translateX(-50%) scale(1.05);
+        }
+
         /* ===== 关键修改部分 ===== */
         .masonry-item {
             background: none; /* 移除黑色背景 */
